--- a/docs/css/portfolio.css
+++ b/docs/css/portfolio.css
@@ -1,5 +1,9 @@
 svg {
-  background-color: #303f9f; }
+  background-color: #303f9f;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#3f51b5), to(#303f9f));
+  background-image: linear-gradient(-180deg, #3f51b5 0%, #303f9f 100%);
+  padding-top: 5%;
+  width: 50%; }
 
 path {
   fill: #ff4081;
@@ -7,3 +11,40 @@ path {
   stroke: #c5cae9;
   -webkit-transition: fill-opacity 3s ease-in-out 1s;
   transition: fill-opacity 3s ease-in-out 1s; }
+
+.carousel {
+  margin: 5rem 0; }
+
+.carousel-inner {
+  left: 15%;
+  width: 70%; }
+
+.carousel-control-next-icon,
+.carousel-control-prev-icon {
+  width: 30px;
+  height: 60px; }
+
+.carousel-control-prev-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23bdbdbd' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E"); }
+
+.carousel-control-next-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23bdbdbd' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E"); }
+
+.carousel-indicators {
+  bottom: 0; }
+  .carousel-indicators li {
+    background-color: rgba(63, 81, 181, 0.5); }
+  .carousel-indicators .active {
+    background-color: #ff4081; }
+
+.card {
+  border: 0 solid #bdbdbd; }
+
+.card-title {
+  color: #ff4081; }
+
+.blockquote-footer {
+  color: #3f51b5;
+  margin-top: 0.5rem; }
+  .blockquote-footer a {
+    color: inherit; }
