Manifest, favicons and CNAME

--- a/css/portfolio.scss
+++ b/css/portfolio.scss
@@ -78,3 +78,11 @@ path {
     color: inherit;
   }
 }
+
+//navbar
+.navbar-nav-svg {
+  display: inline-block;
+  width: 2rem;
+  height: 2rem;
+  vertical-align: text-top;
+}
