--- a/docs/css/portfolio.css
+++ b/docs/css/portfolio.css
@@ -1,16 +1,23 @@
-svg {
+header svg {
   background-color: #303f9f;
   background-image: -webkit-gradient(linear, left top, left bottom, from(#3f51b5), to(#303f9f));
   background-image: linear-gradient(-180deg, #3f51b5 0%, #303f9f 100%);
   padding-top: 5%;
   width: 50%; }
 
-path {
+header svg path {
   fill: #ff4081;
   fill-opacity: 0;
   stroke: #c5cae9;
   -webkit-transition: fill-opacity 3s ease-in-out 1s;
   transition: fill-opacity 3s ease-in-out 1s; }
+
+.navbar-nav-svg {
+  fill: #ff4081; }
+
+a.contact-here {
+  background-color: #3f51b5;
+  color: #ff4081; }
 
 .carousel {
   margin: 5rem 0; }
