--- a/docs/css/portfolio.css
+++ b/docs/css/portfolio.css
@@ -1,23 +1,81 @@
-header svg {
-  background-color: #303f9f;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#3f51b5), to(#303f9f));
-  background-image: linear-gradient(-180deg, #3f51b5 0%, #303f9f 100%);
-  padding-top: 5%;
-  width: 50%; }
+.clip {
+  font-family: "Work Sans", Arial, Helvetica, sans-serif;
+  font-weight: 800;
+  font-size: 3rem;
+  text-align: center;
+  text-transform: uppercase; }
+  .clip, .clip::before, .clip::after {
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 12rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding: 2.3rem 0;
+    margin-top: -6rem;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box; }
+  .clip::before, .clip::after {
+    content: attr(data-content);
+    -webkit-transition: -webkit-clip-path 500ms;
+    transition: -webkit-clip-path 500ms;
+    transition: clip-path 500ms;
+    transition: clip-path 500ms, -webkit-clip-path 500ms; }
+  .clip::before {
+    -webkit-clip-path: polygon(0 0, 100% 0, 0 100%, 0 100%);
+            clip-path: polygon(0 0, 100% 0, 0 100%, 0 100%); }
+  .clip::after {
+    -webkit-clip-path: polygon(100% 0, 100% 100%, 0 100%, 100% 0);
+            clip-path: polygon(100% 0, 100% 100%, 0 100%, 100% 0); }
+  .clip.testimonials::before {
+    background: #ffffff;
+    color: #303f9f; }
+  .clip.testimonials::after {
+    background: #303f9f;
+    color: #ffffff; }
 
-header svg path {
-  fill: #ff4081;
-  fill-opacity: 0;
-  stroke: #c5cae9;
-  -webkit-transition: fill-opacity 3s ease-in-out 1s;
-  transition: fill-opacity 3s ease-in-out 1s; }
+.narrow-width {
+  padding-left: 20%;
+  padding-right: 20%; }
+
+.full-width {
+  width: 100vw;
+  position: relative;
+  left: 50%;
+  right: 50%;
+  margin-left: -50vw;
+  margin-right: -50vw; }
+
+header {
+  text-align: center; }
+  header svg {
+    background-color: #303f9f;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#3f51b5), to(#303f9f));
+    background-image: linear-gradient(-180deg, #3f51b5 0%, #303f9f 100%);
+    padding-top: 5%;
+    width: 50%; }
+    header svg path {
+      fill: #ff4081;
+      fill-opacity: 0;
+      stroke: #c5cae9;
+      -webkit-transition: fill-opacity 3s ease-in-out 1s;
+      transition: fill-opacity 3s ease-in-out 1s; }
 
 .navbar-nav-svg {
   fill: #ff4081; }
 
-a.contact-here {
-  background-color: #3f51b5;
-  color: #ff4081; }
+#testimonials {
+  background-color: #303f9f; }
+
+#carouselTestimonials {
+  margin-top: 15rem; }
 
 .carousel {
   margin: 5rem 0; }
@@ -40,21 +98,65 @@ a.contact-here {
 .carousel-indicators {
   bottom: 0; }
   .carousel-indicators li {
-    background-color: rgba(63, 81, 181, 0.5); }
+    background-color: rgba(197, 202, 233, 0.5); }
   .carousel-indicators .active {
     background-color: #ff4081; }
 
 .card {
+  background-color: #303f9f;
   border: 0 solid #bdbdbd; }
 
 .card-title {
   color: #ff4081; }
+
+.card-text {
+  color: #ffffff; }
+
+.card footer a {
+  color: #c5cae9; }
+
+.card cite {
+  color: #bdbdbd; }
 
 .blockquote-footer {
   color: #3f51b5;
   margin-top: 0.5rem; }
   .blockquote-footer a {
     color: inherit; }
+
+.bg-blackbox {
+  background-image: url(/img/backgrounds/blackbox.jpg); }
+
+.bg-velo-studio {
+  background-image: url(/img/backgrounds/velo-studio.jpg); }
+
+.bg-wedding {
+  background-image: url(/img/backgrounds/01_2400_1600.jpg); }
+
+.project-parallax {
+  position: relative;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  min-height: 80vh; }
+
+.project-content {
+  background-color: white;
+  bottom: 0;
+  position: absolute;
+  width: 100%; }
+
+.project-buttons {
+  margin: -6em auto 4em auto;
+  width: 20em;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content; }
+
+.button-icon {
+  fill: #ffffff;
+  width: 1em; }
 
 .navbar-nav-svg {
   display: inline-block;
