--- a/docs/css/portfolio.css
+++ b/docs/css/portfolio.css
@@ -8,7 +8,7 @@
     position: absolute;
     left: 0;
     width: 100%;
-    height: 12rem;
+    height: 12.1rem;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -19,7 +19,6 @@
         -ms-flex-align: center;
             align-items: center;
     padding: 2.3rem 0;
-    margin-top: -6rem;
     -webkit-box-sizing: border-box;
             box-sizing: border-box; }
   .clip::before, .clip::after {
@@ -34,16 +33,37 @@
   .clip::after {
     -webkit-clip-path: polygon(100% 0, 100% 100%, 0 100%, 100% 0);
             clip-path: polygon(100% 0, 100% 100%, 0 100%, 100% 0); }
-  .clip.testimonials::before {
+  .clip.clip-work::before {
     background: #ffffff;
     color: #303f9f; }
-  .clip.testimonials::after {
+  .clip.clip-work::after {
+    background: #ff4081;
+    color: #ffffff; }
+  .clip.clip-testimonials::before {
+    background: #ff4081;
+    color: #303f9f; }
+  .clip.clip-testimonials::after {
+    background: #303f9f;
+    color: #ffffff; }
+  .clip.clip-projects::before {
+    background: #303f9f;
+    color: #ffffff; }
+  .clip.clip-projects::after {
+    background: #ffffff;
+    color: #212121; }
+  .clip.clip-contact::before {
+    background: #ffffff;
+    color: #303f9f; }
+  .clip.clip-contact::after {
     background: #303f9f;
     color: #ffffff; }
 
-.narrow-width {
-  padding-left: 20%;
-  padding-right: 20%; }
+.clip-height {
+  min-height: 6rem;
+  margin-bottom: 6rem; }
+
+body {
+  margin-top: 74px; }
 
 .full-width {
   width: 100vw;
@@ -53,58 +73,123 @@
   margin-left: -50vw;
   margin-right: -50vw; }
 
-header {
-  text-align: center; }
-  header svg {
-    background-color: #303f9f;
-    background-image: -webkit-gradient(linear, left top, left bottom, from(#3f51b5), to(#303f9f));
-    background-image: linear-gradient(-180deg, #3f51b5 0%, #303f9f 100%);
-    padding-top: 5%;
-    width: 50%; }
-    header svg path {
-      fill: #ff4081;
-      fill-opacity: 0;
-      stroke: #c5cae9;
-      -webkit-transition: fill-opacity 3s ease-in-out 1s;
-      transition: fill-opacity 3s ease-in-out 1s; }
+.narrow-width {
+  padding-left: 2%;
+  padding-right: 2%; }
+
+@media (min-width: 576px) {
+  .narrow-width {
+    padding-left: 5%;
+    padding-right: 5%; } }
+
+@media (min-width: 768px) {
+  .narrow-width {
+    padding-left: 10%;
+    padding-right: 10%; } }
+
+@media (min-width: 992px) {
+  .narrow-width {
+    padding-left: 15%;
+    padding-right: 15%; } }
+
+@media (min-width: 1200px) {
+  .narrow-width {
+    padding-left: 20%;
+    padding-right: 20%; } }
 
 .navbar-nav-svg {
-  fill: #ff4081; }
+  display: inline-block;
+  fill: #ff4081;
+  height: 2rem;
+  vertical-align: text-top;
+  width: 2rem; }
+
+.profile-info-container {
+  color: #303f9f;
+  margin: 3rem auto; }
+  .profile-info-container .h4 {
+    color: #ff4081;
+    margin-bottom: 1.5rem; }
+
+header {
+  text-align: center; }
+  header h1 {
+    color: #303f9f; }
+  header .lead {
+    color: #757575; }
+  header svg {
+    background-color: #ffffff;
+    padding-top: 5%;
+    width: 100%; }
+    header svg path {
+      fill: #303f9f;
+      fill-opacity: 0;
+      stroke: #303f9f; }
+
+.header-flex-container {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center; }
+
+.profile-info-container,
+.profile-svg-container {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 15rem;
+          flex: 1 0 15rem;
+  margin: 2.5rem 1rem; }
+
+#work {
+  background-color: #ff4081;
+  color: #ffffff; }
 
 #testimonials {
-  background-color: #303f9f; }
+  background-color: #303f9f;
+  color: #ffffff; }
 
-#carouselTestimonials {
-  margin-top: 15rem; }
-
-.carousel {
-  margin: 5rem 0; }
-
-.carousel-inner {
-  left: 15%;
-  width: 70%; }
-
-.carousel-control-next-icon,
-.carousel-control-prev-icon {
-  width: 30px;
-  height: 60px; }
-
-.carousel-control-prev-icon {
-  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23bdbdbd' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E"); }
-
-.carousel-control-next-icon {
-  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23bdbdbd' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E"); }
-
-.carousel-indicators {
-  bottom: 0; }
-  .carousel-indicators li {
-    background-color: rgba(197, 202, 233, 0.5); }
-  .carousel-indicators .active {
-    background-color: #ff4081; }
+.card-container {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: #303f9f;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center; }
 
 .card {
-  background-color: #303f9f;
-  border: 0 solid #bdbdbd; }
+  /* FF3.6-15 */
+  /* Chrome10-25,Safari5.1-6 */
+  background: -webkit-gradient(linear, left top, left bottom, from(#3f51b5), to(rgba(125, 185, 232, 0)));
+  background: linear-gradient(to bottom, #3f51b5 0%, rgba(125, 185, 232, 0) 100%);
+  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr="#3f51b5", endColorstr="#007db9e8", GradientType=0 );
+  /* IE6-9 */
+  border: 0 solid #bdbdbd;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 25rem;
+          flex: 1 0 25rem;
+  margin: 3rem;
+  padding-top: 2rem; }
 
 .card-title {
   color: #ff4081; }
@@ -141,6 +226,10 @@ header {
   background-size: cover;
   min-height: 80vh; }
 
+#projects {
+  background-color: #ffffff;
+  color: #212121; }
+
 .project-content {
   background-color: white;
   bottom: 0;
@@ -148,18 +237,45 @@ header {
   width: 100%; }
 
 .project-buttons {
-  margin: -6em auto 4em auto;
-  width: 20em;
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content; }
+  margin: -6em auto 6em auto;
+  width: 22em;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content; }
 
 .button-icon {
   fill: #ffffff;
   width: 1em; }
 
-.navbar-nav-svg {
-  display: inline-block;
-  width: 2rem;
-  height: 2rem;
-  vertical-align: text-top; }
+.h2-blackbox {
+  font-family: "Passion One";
+  font-size: 8rem;
+  line-height: 6rem;
+  padding-bottom: 2rem;
+  text-align: center; }
+
+.h2-wedding {
+  color: #ff4081;
+  font-family: "Lovers Quarrel";
+  font-size: 8rem;
+  padding-bottom: 2rem;
+  text-align: center; }
+
+.contact {
+  background-color: #303f9f;
+  color: #ffffff; }
+
+.contact-icon {
+  height: 32px;
+  width: 32px; }
+
+.contact h1,
+.projects h1,
+.work h1,
+.testimonials h1 {
+  font-family: "Work Sans", Arial, Helvetica, sans-serif;
+  font-weight: 800;
+  font-size: 3rem;
+  line-height: 8rem;
+  text-align: center;
+  text-transform: uppercase; }
