Forced contact button to be circular. Changed tel. no.

--- a/docs/css/portfolio.css
+++ b/docs/css/portfolio.css
@@ -113,6 +113,9 @@ body {
 
 header {
   text-align: center; }
+  header button {
+    height: 64px;
+    width: 64px; }
   header h1 {
     color: #303f9f; }
   header .lead {
