--- a/docs/css/portfolio.css
+++ b/docs/css/portfolio.css
@@ -104,6 +104,17 @@ body {
   height: 2rem;
   vertical-align: text-top;
   width: 2rem; }
+  .navbar-nav-svg :hover {
+    fill: #3f51b5; }
+
+.btn-primary {
+  background-color: #3f51b5;
+  border-color: #3f51b5;
+  color: #ffffff; }
+  .btn-primary:hover {
+    background-color: #ff4081;
+    border-color: #ff4081;
+    color: #ffffff; }
 
 .profile-info-container {
   color: #303f9f;
