--- a/docs/css/portfolio.css
+++ b/docs/css/portfolio.css
@@ -216,7 +216,7 @@ li {
   background: -webkit-gradient(linear, left top, left bottom, from(#3f51b5), to(rgba(125, 185, 232, 0)));
   background: linear-gradient(to bottom, #3f51b5 0%, rgba(125, 185, 232, 0) 100%);
   /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr="#3f51b5", endColorstr="#007db9e8", GradientType=0 );
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3f51b5', endColorstr='#007db9e8', GradientType=0 );
   /* IE6-9 */
   border: 0 solid #bdbdbd;
   -webkit-box-flex: 1;
@@ -257,6 +257,9 @@ li {
 .bg-wedding {
   background-image: url(/img/backgrounds/01_2400_1600.jpg); }
 
+.bg-ejss3 {
+  background-image: url(/img/backgrounds/ejss3.jpg); }
+
 .project-parallax {
   position: relative;
   background-attachment: fixed;
@@ -287,7 +290,7 @@ li {
   width: 1em; }
 
 .h2-blackbox {
-  font-family: "Passion One";
+  font-family: 'Passion One';
   font-size: 8rem;
   line-height: 6rem;
   padding-bottom: 2rem;
@@ -295,8 +298,14 @@ li {
 
 .h2-wedding {
   color: #ff4081;
-  font-family: "Lovers Quarrel";
+  font-family: 'Lovers Quarrel';
   font-size: 8rem;
+  padding-bottom: 2rem;
+  text-align: center; }
+
+.h2-ejss3 {
+  color: #303f9f;
+  font-size: 3rem;
   padding-bottom: 2rem;
   text-align: center; }
 
@@ -327,7 +336,7 @@ li {
   background: -webkit-gradient(linear, left top, left bottom, from(#3f51b5), to(rgba(125, 185, 232, 0)));
   background: linear-gradient(to bottom, #3f51b5 0%, rgba(125, 185, 232, 0) 100%);
   /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr="#3f51b5", endColorstr="#007db9e8", GradientType=0 );
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3f51b5', endColorstr='#007db9e8', GradientType=0 );
   /* IE6-9 */
   border: 0 solid #bdbdbd;
   -webkit-box-flex: 1;
@@ -362,7 +371,7 @@ li {
 .projects h1,
 .work h1,
 .testimonials h1 {
-  font-family: "Work Sans", Arial, Helvetica, sans-serif;
+  font-family: 'Work Sans', Arial, Helvetica, sans-serif;
   font-weight: 800;
   font-size: 3rem;
   line-height: 8rem;
