--- a/css/portfolio.scss
+++ b/css/portfolio.scss
@@ -1,5 +1,12 @@
+// @import 'typography';
 @import 'colours';
 @import 'clip';
+
+// override bootstrap type margin
+.h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
+  margin-bottom: 1rem;
+  margin-top: 1.5rem;
+}
 
 body {
   margin-top: 74px; // to accommodate fixed navbar height
