Integrated lambda send email service for contact form

--- a/css/portfolio.scss
+++ b/css/portfolio.scss
@@ -3,7 +3,18 @@
 @import 'clip';
 
 // override bootstrap type margin
-.h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
+.h1,
+.h2,
+.h3,
+.h4,
+.h5,
+.h6,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   margin-bottom: 1rem;
   margin-top: 1.5rem;
 }
@@ -356,4 +367,10 @@ li {
   line-height: 8rem;
   text-align: center;
   text-transform: uppercase;
+}
+
+// Forms
+.form-control:focus {
+  border-color: #ff3f81;
+  box-shadow: 0 0 0 0.2rem rgba(255, 63, 129, 0.25);
 }
